--- a/articles/native/1.start.md
+++ b/articles/native/1.start.md
@@ -1,54 +1,91 @@
 # 开始
 
-开一个新项目(新建文件夹随便起个名, `cd`进去, `cargo init`)
+我们创建一个新项目(使用`cargo new`), 并`cd`进项目文件夹. 
 
-首先在你的项目中安装`key_native`模块: `cargo add key_native`
+首先在你的项目中添加`key_native`模块: `cargo add key_native`. 
 
-然后修改`Cargo.toml`, 在最后添加以下内容(让rust知道你在编译动态链接库, 否则会把你的项目视为可运行程序)
+然后修改文件夹中的`Cargo.toml`文件, 添加以下内容. 
+
+这样可以让Rust知道你在编译动态链接库也就是`dll`, 否则会把你的项目视为可运行程序. 
 
 ```toml
 [lib]
 crate-type = ["cdylib"]
 ```
 
-接着把`main.rs`删掉, 新建一个`lib.rs`(是`cdylib`的要求).
+接着把`main.rs`删掉, 新建一个`lib.rs`文件. 
 
 最后在`lib.rs`中这样写: 
 
 ```rust
-// prelude是预备的意思, 其中为你准备了最常用的部件
-// use ..::* 就是使用所有常用部件
+// 使用key_native最常用的部件
 use key_native::prelude::*;
 
-// 如果你不懂编译原理的话, 只需要死记这条
-// 它相当于#[export_name = "main"]
-// 意思是在动态链接库中导出这个函数
-// 并命名为main供Key解释器调用
+// #[no_mangle]用来导出main函数
 #[no_mangle]
 // 该函数就是Key原生模块的主函数, 
 // 会在遇到mod xx> m的语句时直接被调用
-// NativeModule就是prelude中的一个部件
-// 代表的是Key为你创建了一个空模块, 而你会拿到其修改权
-// 该模块可以导出函数和类, 之后会说到
-fn main(_m:&mut NativeModule) {
+// NativeModule就是我们的原生模块
+fn main(_m: &mut NativeModule) {
   println!("okk");
 }
 ```
 
-至此一切都配置完成了. 运行`cargo build`, 找到`target/debug/`, 里面会有一个`xxlib.dll`的文件, 就是你成功生成的原生模块了. 你可以在vscode中右键此文件, 点复制路径, 然后粘贴到一个`ks`文件中. 
+我们编译这个项目: `cargo build`. 
 
-假设你的目录是`d:\code\rust\keytest`, 那么你的`dll`文件应当是`d:\code\rust\keytest\target\debug\keytestlib.dll`. 那么在这个ks文件中:
+之后, 找到项目文件夹下的`/target/debug/`, 里面会有一个`dll`的文件, 就是你成功生成的原生模块了. 
+
+我们复制这个`dll`文件的路径, 粘贴到`ks`文件中的`mod`语句中. 
+
+假设你的目录是`d:\code\rust\keytest`, 那么你的`dll`文件应当是`d:\code\rust\keytest\target\debug\keytestlib.dll`. 
+
+我们直接把完整路径复制到`ks`文件中:
 
 ```ks
-mod d:\code\rust\keytest\target\debug\keytestlib.dll> my_mod;
+mod d:\code\rust\keytest\target\debug\keytestlib.dll> m;
 ```
 
-用`key`命令运行这个脚本, 就能看到打印`okk`. 
+使用`key ...ks`(`...ks`是你的`ks`文件名)运行这个脚本, 就能看到打印`okk`. 
 
-## 报错
+## 类型
 
-使用`key_native`时, 程序会自动使用Key语言的报错(将你的库的报错转达给Key解释器, 让其代为报错). 如果你想更改报错方式, 请使用[`std::panic::set_hook`](https://doc.rust-lang.org/std/panic/fn.set_hook.html). 
+在开始开发之前, 我们需要了解一些类型: 
+
+|类型|用途|
+|--|--|
+|`Litr`|一个枚举, 包含了Key语言的所有基本类型|
+|`LitrRef`|一个智能指针, 代表了`Litr`的引用|
+|`Scope`|一个作用域|
+
+`Litr`的定义如下, Key语言中的基本类型名都和该枚举的变体名相同. 
+
+原生类实例为`Ninst`, 本地类实例为`Inst`. 
+
+原生实例之后再说, 本地实例则暂时无法被原生模块使用. 
+
+```rust
+pub enum Litr {
+  /// `()`, `uninit`
+  Uninit,
+
+  Int    (isize),
+  Uint   (usize),
+  Float  (f64),
+  Bool   (bool),
+
+  Func   (Function), 
+  Str    (String),
+  Buf    (Vec<u8>),
+  List   (Vec<Litr>),
+  Obj    (HashMap<Ident, Litr>),
+
+  Inst   (/* private */),
+  Ninst  (Instance)
+}
+```
 
 ## 结语
 
-至此基本环境已经准备完成. 下一篇将会带你导出一个函数供Key使用. 
+至此`Hello World`已成. 
+
+接下来我们<jmp to="/native/2.func">导出函数</jmp>
