--- a/articles/native/2.func.md
+++ b/articles/native/2.func.md
@@ -1,15 +1,27 @@
 # 导出函数
 
+我们定义原生函数时, 要写成以下格式: 
+
+```rust
+fn(args: Vec<LitrRef>, cx: Scope)-> Litr
+```
+
+其中`args`是传进来的参数, 里面是Key语言的值的引用. 
+
+`cx`是上下文`context`的意思, 代表了调用这个函数时所处的作用域. 
+
+`cx`我们先不管, 将参数名`cx`写成`_cx`就可以让编译器对没用到的参数闭嘴. 
+
+原生函数需要返回`Litr`. 如果该函数不需要返回值, 就返回`Litr::Uninit`. 
+
 让我们在`lib.rs`中这样写:
 
 ```rust
 use key_native::prelude::*;
 
-// 定义一个要导出的函数(格式为 fn(Vec<LitrRef, Scope>)-> Litr )
-// Litr就是Key语言的值, LitrRef代表了Litr的可写指针
-// Scope是调用咱函数的作用域, 之后再说
+// 定义一个原生函数
 fn print_arg(args:Vec<LitrRef>, _cx:Scope)-> Litr {
-  // 使用get_arg宏来获取第n个函数, 之后会专门说
+  // 使用get_arg宏来获取第n个函数
   let a = get_arg!(args[0]);
   // 将得到的值打印出来
   println!("{:?}", a);
@@ -20,35 +32,47 @@ fn print_arg(args:Vec<LitrRef>, _cx:Scope)-> Litr {
 #[no_mangle]
 fn main(m: &mut NativeModule) {
   // 使用export_fn方法导出一个函数
-  m.export_fn("print_arg", print_arg);
+  // 第一个参数是key语言使用的实际函数名
+  // 第二个参数是你上文定义的函数
+  m.export_fn("print", print_arg);
 }
 ```
 
-在ks中写(将`xxx`代入你的dll路径):
+我们编译一下: `cargo build`. 
+
+在ks中写(`...dll`代入你的原生模块路径):
 
 ```ks
-mod xxx.dll> m;
-m-.print_arg("芙卡洛斯")
+mod ...dll> m;
+m-.print("芙卡洛斯")
 ```
 
-运行(将`xxx`代入你的ks文件路径):
+运行(将`...ks`代入你的ks文件路径):
 
 ```sh
-cargo build
-key xxx.ks
+key ...ks
 ```
 
 应该看到打印出: `Str("芙卡洛斯")`. 
 
-## `get_arg`
+## `get_arg!`
 
-`get_arg`是我为了减少用户的参数判断代码而设计的宏, 使用方法是: 
+`get_arg`是一个自动判断并读取参数的宏. 
+
+使用方法是: 
 
 ```rust
-// 得到第n个参数的Litr引用(不存在直接报错)
+// 得到第n个参数的Litr引用
+// 不存在直接报错
 get_arg!(args[n]);
 
-// 得到第n个参数, 并判断其类型, 直接返回其类型的Rust值
+// 得到第n个参数的Litr引用
+// 不存在则得到Litr::uninit
+get_arg!(args[n]?);
+
+// 得到第n个参数, 
+// 并判断其类型, 直接返回其类型的Rust值
+// 比如`get_arg!(args[0]:Int)`直接返回isize类型
 // 如果没有第n个参数, 或类型不正确则直接报错
 get_arg!(args[n]:Type);
 
@@ -61,8 +85,8 @@ get_arg!(args[n]:Type?default);
 |参数|含义|
 |---|---|
 |`args`|你函数得到的`Vec<LitrRef>`的参数名字|
-|`n`|你要读取第n个参数|
-|`Type`|你需要该参数为什么类型(基本类型, Key本地类的实例是`Inst`, Key原生类的实例是`Ninst`)|
+|`n`|你要读取第`n`个参数|
+|`Type`|你需要该参数为什么类型|
 |`default`|默认值|
 
 `get_arg!`只是`match`语法的缩写, 如果需要更细致的控制流程, 尝试这样写: 
@@ -76,8 +100,7 @@ let a = get_arg!(args[0]:Bool?false);
 let a = args.get(0).map_or(false, |n|{
   // match后没有分号, 代表整个match是这个处理函数的返回值
   // &**的意思是, 第一个*代表将&LitrRef转为LitrRef
-  // 第二个*代表把LitrRef解引用成Litr (LitrRef实现了std::ops::Deref)
-  // &代表我只是拿(**n)的引用, 并不打算将它所有权拿走
+  // 第二个*代表把LitrRef转换成Litr
   match &**n {
     Litr::Bool(b)=> *b,
     _=> false
@@ -85,27 +108,27 @@ let a = args.get(0).map_or(false, |n|{
 });
 ```
 
-## 可变和修改
+## 修改
 
-有的时候你需要几个`&mut Litr`去修改参数, 但Rust说你已经有可变参数了, 不让你用多个`args.get_mut`. 解决方法是: 
+`get_arg`宏只在不修改参数的值时好用. 
+
+如果你需要修改一个参数的值, 就没法依赖`get_arg`了. 
+
+试着实现一个函数, 将其`false`改为`true`: 
 
 ```rust
-use key_native::prelude::*;
-
-fn set_true(args:Vec<LitrRef>, _cx:Scope)-> Litr {
-  // 将整个args变成一个迭代器(不像iter, 该迭代器会取走所有权)
-  // 也可以考虑使用iter_mut
-  let mut args = args.into_iter();
-  // 原本要get(0), 现在要改成args.next()
-  // expect方法在next()为None时自动报错
-  let mut arg0 = args.next().expect("set_true至少需要一个参数");
-  // 该next()的返回值是有所有权的LitrRef, 所以*只有一个
-  // 如果上文是iter_mut, 此处就该多一个*
-  let arg0_mut = match &mut *arg0 {
+// 将args标为mut才能get_mut
+fn set_true(mut args:Vec<LitrRef>, _cx:Scope)-> Litr {
+  // expect方法在None时自动报错
+  let arg0 = args.get_mut(0).expect("set_true至少需要一个参数");
+  // '&LitrRef'需要使用'**arg0'将其转为Litr
+  let arg0_mut = match &mut **arg0 {
+    // &mut Litr的匹配结果也是可变引用
+    // 此处的b为&mut bool
     Litr::Bool(b)=> b,
     _=> panic!("set_true第一个参数必须是Bool")
   };
-  // 将这个&mut bool设成true
+  // 将这个&mut bool的值设成true
   *arg0_mut = true;
   // 相当于无返回值
   Litr::Uninit
@@ -113,29 +136,35 @@ fn set_true(args:Vec<LitrRef>, _cx:Scope)-> Litr {
 
 #[no_mangle]
 fn main(m: &mut NativeModule) {
-  // 使用export_fn方法导出一个函数
-  // 第一个"set_true"是key调用时用的函数名
-  // 第二个是你上边定义的函数的名字
   m.export_fn("set_true", set_true);
 }
 ```
 
-这样写的话几个参数需要`&mut`都不会引起可变引用的冲突. 在Key中这样写:
+`ks`文件中:
 
 ```ks
-mod xx.dll> m;
+mod ...dll> m;
 
 let bool = false;
 m-.set_true(bool);
 log(bool); // true
 ```
 
-其实`LitrRef`也是可以直接写入的. 以下是`swap`源码, 你一定也可以实现.
+可以看到`bool`成功变成了`true`. 
+
+## 多个可变参数
+
+`LitrRef`也是可以直接写入的. 
+
+以下是`swap`源码, 你一定也可以实现. 
+
+对于多个可变引用, 使用`iter_mut`和`next`来读取参数. 
 
 ```rust
 fn swap(mut args:Vec<LitrRef>, _c:Scope)-> Litr {
   // 如果参数小于2个直接报错
   assert!(args.len()>=2, "swap需要两个值用于无分配交换");
+  // 将参数转为可变迭代器
   let mut it = args.iter_mut();
   // it.next().unwrap()是&mut LitrRef, 使用 &mut ** 直接将其转为&mut Litr
   std::mem::swap(&mut **it.next().unwrap(), &mut **it.next().unwrap());
