--- a/articles/native/4.class.md
+++ b/articles/native/4.class.md
@@ -63,9 +63,15 @@ a.look(); // 打印: {2: "test"}
 
 ## `ondrop`和`onclone`
 
-你不会不知道析构函数是什么吧? 不用查百科了, 一句话: 析构函数就是一个值生命周期结束时, 自动调用的函数. 在Key原生模块中叫`ondrop`, 在Rust中叫`Drop trait`. 至于`onclone`, 似乎没有人定义它的中文名, 中文就叫它*复制回调函数*好了, 在Rust中叫作`Clone trait`.
+析构函数就是一个值生命周期结束时, 自动调用的函数. 
 
-需要注意的是, 析构函数最常用的场景是使用了内存分配(`Allocation`)后, 在持有其指针的变量死去(生命周期结束)时, 自动调用析构函数去把分配的内存还给系统(释放内存`Deallocation`); rust中的`Box`就是这个原理. 
+析构函数在Key原生模块中叫`ondrop`, 在Rust中叫`Drop trait`. 
+
+至于`onclone`, 似乎没有人定义它的中文名, 中文就叫它*复制回调函数*好了, 在Rust中叫作`Clone trait`.
+
+需要注意的是, 析构函数最常用的场景是使用了内存分配(`Allocation`)后, 在持有其指针的变量死去(生命周期结束)时, 自动调用析构函数去把分配的内存还给系统(释放内存`Deallocation`). 
+
+rust中的`Box`就是这个原理. 
 
 上文中实现的哈希表储存, 无法在其生命周期结束时自动回收哈希表内分配的内存. 因此我们需要使用`ondrop`去实现它的析构函数. 
 
