fix: uninit的属性和数组越界将报错

--- a/articles/guide/4.collect.md
+++ b/articles/guide/4.collect.md
@@ -47,7 +47,7 @@ log(List::from_iter(10));
 
 ### 使用索引
 
-列表可以使用`[i]`的写法读写一个槽位的值. `i`必须是整数`Int`或正整数`Uint`. 读取超出范围的值时会得到`uninit`, 写入超出范围的值时什么也不发生. 
+列表可以使用`[i]`的写法读写一个槽位的值. `i`必须是整数`Int`或正整数`Uint`. 读取超出范围的值时将会报错. 
 
 ```ks
 let a = [2,4,6];
@@ -137,7 +137,7 @@ log(a);
 
 数组可以通过整数索引读写内容, 并且只能写入整数. 
 
-数组值读取时均为`Uint`类型. 超出范围的读取得到`uninit`, 超出范围的写入则不做任何事情. 
+数组值读取时均为`Uint`类型. 超出范围的读写将会报错. 
 
 ```ks
 let a = '046';
@@ -202,8 +202,6 @@ log(o);
 哈希表可以使用字符串`Str`索引和属性名读写内容. 
 
 读取不存在的值时会得到`uninit`. 写入不存在的属性时会自动插入. 
-
-由于`uninit`的任何属性都是`uninit`, 所以可以放心读取哈希表, 不用担心读空值出错了. 
 
 ```ks
 let o = {};
