feat: 新增相对路径相关参考

--- a/articles/guide/8.mod.md
+++ b/articles/guide/8.mod.md
@@ -230,3 +230,12 @@ i.set_a(6);
 需要注意的是: 即使是同一模块, 重复导入也会重新执行模块内容, 相当于重置模块. 也就是说原则上Key语言并不会对你的模块进行缓存行为, 因此你可以安心的在自己的模块中初始化全局变量.
 
 另外, 无论你在什么地方导入模块(不管多深的作用域), 都会共享给整个模块(也就是作用域内声明模块, 作用域外部也能使用该模块)
+
+### 导入路径
+
+使用`mod`导入路径时, 值得注意:
+
+- `.ks`后缀名可以省略
+- 如果发现你传入的路径是文件夹, 则会寻找该文件夹下的`/mod.ks`
+- 使用相对路径时, 会以`ks`文件的位置为起点, 支持`../`作为相对路径开头
+- todo: `mod+ xx> @dir`用语法添加一个搜索路径, 没标准库就先不做了
